[Material][Mac] Update App Menu Icons and Colors

Change the "Low Severity" color to Green. Update the icons to the MD
ones.

BUG=624643, 626775

Review-Url: https://codereview.chromium.org/2139573003
Cr-Commit-Position: refs/heads/master@{#405532}

Former-commit-id: bf0c21d44b16d6e1a3c973ee5e94e4355ed4fe96