chrome/browser/ui/cocoa/toolbar/app_toolbar_button.h
@@ -10,6 +10,7 @@
 #include <memory>
 
 #import "chrome/browser/ui/cocoa/menu_button.h"
+#include "chrome/browser/ui/toolbar/app_menu_icon_controller.h"
 #include "chrome/browser/ui/toolbar/app_menu_icon_painter.h"
 
 class AppMenuButtonIconPainterDelegateMac;
@@ -19,9 +20,11 @@ class AppMenuButtonIconPainterDelegateMac;
  @private
   std::unique_ptr<AppMenuButtonIconPainterDelegateMac> delegate_;
   AppMenuIconPainter::Severity severity_;
+  AppMenuIconController::IconType type_;
 }
 
 - (void)setSeverity:(AppMenuIconPainter::Severity)severity
+           iconType:(AppMenuIconController::IconType)iconType
       shouldAnimate:(BOOL)shouldAnimate;
 
 @end
